cmake_minimum_required(VERSION 3.10)
project(wxWidgetsSamples LANGUAGES CXX)

if("cxx_std_26" IN_LIST CMAKE_CXX_COMPILE_FEATURES)
  set(CMAKE_CXX_STANDARD 26)
elseif("cxx_std_23" IN_LIST CMAKE_CXX_COMPILE_FEATURES)
  set(CMAKE_CXX_STANDARD 23)
elseif("cxx_std_20" IN_LIST CMAKE_CXX_COMPILE_FEATURES)
  set(CMAKE_CXX_STANDARD 20)
endif()
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

if(DEFINED ENV{wxWidgets_CONFIGURATION})
  set(wxWidgets_CONFIGURATION $ENV{wxWidgets_CONFIGURATION})
endif()
if(DEFINED ENV{VCPKG_ROOT})
  set(VCPKG_ROOT $ENV{VCPKG_ROOT})
endif()
if(DEFINED ENV{VCPKG_DEFAULT_TRIPLET})
  set(VCPKG_DEFAULT_TRIPLET $ENV{VCPKG_DEFAULT_TRIPLET})
endif()

find_package(wxWidgets CONFIG REQUIRED)

find_package(PkgConfig QUIET)
if(PKG_CONFIG_FOUND)
  message(STATUS "PkgConfig found.")
  pkg_check_modules(GTK QUIET gtk4)
  if(GTK_FOUND)
    message(STATUS "GTK found.")
    message(STATUS "GTK include directories: ${GTK_INCLUDE_DIRS}")
    message(STATUS "GTK libraries: ${GTK_LIBRARIES}")
    include_directories(${GTK_INCLUDE_DIRS})
  endif()
  pkg_check_modules(GTK QUIET gtk3)
  if(GTK_FOUND)
    message(STATUS "GTK found.")
    message(STATUS "GTK include directories: ${GTK_INCLUDE_DIRS}")
    message(STATUS "GTK libraries: ${GTK_LIBRARIES}")
    include_directories(${GTK_INCLUDE_DIRS})
  endif()
else()
  message(STATUS "PkgConfig not found.")  
endif()
if(NOT GTK_FOUND)
  if(DEFINED VCPKG_ROOT AND DEFINED VCPKG_DEFAULT_TRIPLET)
    if(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/include/gtk-4.0/gtk/gtk.h")
      set(GTK_INCLUDE_DIRS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/include/gtk-4.0")
      if(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/lib/libgtk-4.a")
        set(GTK_FOUND TRUE)
        set(GTK_LIBRARIES "gtk-4")
      elseif(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/lib/libgtk-4.dll.a")
        set(GTK_FOUND TRUE)
        set(GTK_LIBRARIES "gtk-4")
      elseif(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/lib/libgtk-4.so.a")
        set(GTK_FOUND TRUE)
        set(GTK_LIBRARIES "gtk-4")
      endif()
    elseif(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/include/gtk-3.0/gtk/gtk.h")
      set(GTK_INCLUDE_DIRS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/include/gtk-3.0")
      if(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/lib/libgtk-3.a")
        set(GTK_FOUND TRUE)
        set(GTK_LIBRARIES "gtk-3")
      elseif(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/lib/libgtk-3.dll.a")
        set(GTK_FOUND TRUE)
        set(GTK_LIBRARIES "gtk-3")
      elseif(EXISTS "${VCPKG_ROOT}/installed/${VCPKG_DEFAULT_TRIPLET}/lib/libgtk-3.so.a")
        set(GTK_FOUND TRUE)
        set(GTK_LIBRARIES "gtk-3")
      endif()
    endif()
  endif()
  if(GTK_FOUND)
    message(STATUS "GTK found.")
    message(STATUS "GTK include directories: ${GTK_INCLUDE_DIRS}")
    message(STATUS "GTK libraries: ${GTK_LIBRARIES}")
    include_directories(${GTK_INCLUDE_DIRS})
  endif()
endif()

if(wxWidgets_FOUND)
  message(STATUS "wxWidgets components: ${wxWidgets_COMPONENTS}")
  message(STATUS "wxWidgets libraries: ${wxWidgets_LIBRARIES}")
else()
  message(FATAL_ERROR "wxWidgets not found. Please set wxWidgets_ROOT_DIR or install wxWidgets.")
endif()

message(STATUS "CXX standard: ${CMAKE_CXX_STANDARD}")
message(STATUS "Detected generator: ${CMAKE_GENERATOR}")
message(STATUS "Detected c compiler: ${CMAKE_C_COMPILER}")
message(STATUS "Detected c++ compiler: ${CMAKE_CXX_COMPILER}")
message(STATUS "Detected resource compiler: ${CMAKE_RC_COMPILER}")

add_compile_definitions(_CRT_NON_CONFORMING_SWPRINTFS=1 _CRT_SECURE_NO_DEPRECATE=1  _SCL_SECURE_NO_WARNINGS=1 _UNICODE UNICODE)
include_directories(BEFORE ${CMAKE_CURRENT_SOURCE_DIR} ${wxWidgets_INCLUDE_DIRS})

add_subdirectory(access)
add_subdirectory(animate)
add_subdirectory(archive)
add_subdirectory(artprov)
add_subdirectory(aui)
add_subdirectory(bombs)
add_subdirectory(calendar)
add_subdirectory(caret)
add_subdirectory(collpane)
add_subdirectory(combo)
add_subdirectory(config)
add_subdirectory(console)
add_subdirectory(dataview)
add_subdirectory(dialogs)
add_subdirectory(dialup)
add_subdirectory(display)
add_subdirectory(dnd)
add_subdirectory(docview)
add_subdirectory(dragimag)
add_subdirectory(drawing)
add_subdirectory(erase)
add_subdirectory(event)
add_subdirectory(except)
add_subdirectory(exec)
add_subdirectory(font)
add_subdirectory(forty)
add_subdirectory(fractal)
add_subdirectory(fswatcher)
add_subdirectory(grid)
add_subdirectory(help)
add_subdirectory(htlbox)
add_subdirectory(html)
add_subdirectory(image)
add_subdirectory(internat)
add_subdirectory(keyboard)
add_subdirectory(layout)
add_subdirectory(life)
add_subdirectory(listctrl)
add_subdirectory(mdi)
add_subdirectory(mediaplayer)
add_subdirectory(menu)
add_subdirectory(minimal)
if(WIN32)
  add_subdirectory(nativdlg)
endif()
add_subdirectory(notebook)
add_subdirectory(opengl)
if(WIN32)
  add_subdirectory(ownerdrw)
endif()  
add_subdirectory(poem)
add_subdirectory(popup)
add_subdirectory(power)
add_subdirectory(preferences)
add_subdirectory(printing)
add_subdirectory(propgrid)
add_subdirectory(ribbon)
add_subdirectory(richtext)
add_subdirectory(sashtest)
add_subdirectory(scroll)
if(WIN32)
  add_subdirectory(secretstore)
endif()  
add_subdirectory(shaped)
add_subdirectory(sound)
add_subdirectory(splash)
add_subdirectory(splitter)
add_subdirectory(statbar)
add_subdirectory(svg)
add_subdirectory(taborder)
add_subdirectory(taskbar)
if(WIN32)
  add_subdirectory(taskbarbutton)
endif()  
add_subdirectory(text)
add_subdirectory(thread)
add_subdirectory(toolbar)
add_subdirectory(touchtest)
add_subdirectory(treectrl)
add_subdirectory(treelist)
add_subdirectory(typetest)
add_subdirectory(uiaction)
add_subdirectory(validate)
add_subdirectory(vscroll)
add_subdirectory(webrequest)
add_subdirectory(widgets)
add_subdirectory(wizard)
add_subdirectory(wrapsizer)
add_subdirectory(xrc)

if(wxWidgets_stc_FOUND)
  add_subdirectory(stc)
endif()

if(wxWidgets_webview_FOUND)
  add_subdirectory(webview)
endif()

if(MSVC)
  add_subdirectory(debugrpt)
endif()

if(WIN32)
  add_subdirectory(oleauto)
  add_subdirectory(regtest)
endif()

if(WIN32 AND wxWidgets_USE_STATIC)
  add_subdirectory(dll)
endif()
