cmake_minimum_required(VERSION 3.10)
project(archive LANGUAGES CXX)

if(WIN32)
    file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.rc  ${CMAKE_SOURCE_DIR}/*.xpm)
else()
    file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
add_executable(archive ${SRC_FILES})
target_link_libraries(archive PRIVATE ${wxWidgets_LIBRARIES})
