cmake_minimum_required(VERSION 3.10)
project(calendar LANGUAGES CXX)

if(WIN32)
    file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.rc  ${CMAKE_SOURCE_DIR}/*.xpm)
else()
    file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
    add_executable(calendar WIN32 ${SRC_FILES})
else()
    add_executable(calendar ${SRC_FILES})
endif()
target_link_libraries(calendar PRIVATE ${wxWidgets_LIBRARIES})
