cmake_minimum_required(VERSION 3.25.0)
project(dll LANGUAGES CXX)
if(WIN32 AND wxWidgets_USE_STATIC)
  add_library(my_dll SHARED my_dll.cpp my_dll.h)
  target_link_libraries(my_dll PRIVATE ${wxWidgets_LIBRARIES})
  add_executable(sdk_exe WIN32 sdk_exe.cpp)
  target_link_libraries(sdk_exe PRIVATE ${wxWidgets_LIBRARIES})
  target_link_libraries(sdk_exe PRIVATE my_dll)
  add_executable(wx_exe WIN32 wx_exe.cpp)
  target_link_libraries(wx_exe PRIVATE ${wxWidgets_LIBRARIES})
  target_link_libraries(wx_exe PRIVATE my_dll)
endif()
