cmake_minimum_required(VERSION 3.15)
project(docview LANGUAGES CXX)

if(WIN32)
  file(GLOB SRC_FILES *.cpp *.h *.rc  ${CMAKE_SOURCE_DIR}/*.xpm)
else()
  file(GLOB SRC_FILES *.cpp *.h ${CMAKE_SOURCE_DIR}/*.xpm)
endif()
if(WIN32)
  add_executable(docview WIN32 ${SRC_FILES})
else()
  add_executable(docview ${SRC_FILES})
endif()
target_link_libraries(docview PRIVATE ${wxWidgets_LIBRARIES})
